# kalman-filter

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  filter_parse_input.c  filter_parse_input.h  init.c  kalman_filter.c  kalman_filter.h  kalman_filter_object.py  kalman_filter_sp.c  kalman_filter_sp.h  kalman_filter_verbose.c  kalman_filter_verbose.h  kalman_smoother.c  kalman_smoother.h  models.py  pyproject.toml  setup.py  test.c  test.h  tree_ring_oop.py  types.py  utils.c  utils.h
.github/workflows/: build_wheels.yaml
LICENSES/: scipy_openblas64.txt
data/: README.md  nile.json  simulated_commodity_futures.csv  treering.json
examples/: nile.py  simulated_commodity_futures.py  treering.py
kalman_filter/: __init__.py  base.py  exceptions.py  methods.py  models.py
kalman_filter/c_core/: init.c  kalman_filter.c  kalman_filter.h  kalman_filter_verbose.c  kalman_filter_verbose.h  kalman_smoother.c  kalman_smoother.h  utils.c  utils.h
kalman_filter/native/: init.c  kalman_filter_verbose.h  kalman_smoother.c
kalman_filter/src/: utils.c
test/: _base.py  test_nile.py  test_treering.py
test/data/nile/: filtered.json  smoothed.json
test/data/treering/: filtered.json  smoothed.json
