[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "scipy-openblas64"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman_filter"
version = "1.0.0"
license = "MIT"
license-files = ["LICENSE"]
description = "Fast and efficient Kalman filtering and smoothing"
authors = [{ name = "Thomas Aspinall", email = "tomaspinall2512@gmail.com" }]
maintainers = [
    { name = "Thomas Aspinall", email = "tomaspinall2512@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.22", "scipy-openblas64"]
keywords = ["Kalman", "Kalman filter", "state space", "state space methods"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Programming Language :: C',
    'Programming Language :: Python :: Implementation :: CPython',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Typing :: Typed',
    "Topic :: Scientific/Engineering :: Mathematics",
]


[project.urls]
repository = "https://github.com/TomAspinall/kalman-filter"
changelog = "https://github.com/TomAspinall/kalman-filter/CHANGELOG.md"
issues = "https://github.com/TomAspinall/kalman-filter/issues"
"Dissertation" = "https://pure.bond.edu.au/ws/portalfiles/portal/167739220/Thomas_Aspinall_Thesis.pdf"

[tool.setuptools]
packages = ["kalman_filter", "kalman_filter.c_core"]
include-package-data = true

[tool.setuptools.package-data]
kalman_filter = ["*.c", "*.h", "*.dll"]
